fixed issue where there was extra white space on right side of page

--- a/packages/react-frontend/src/components/Navbar_search.css
+++ b/packages/react-frontend/src/components/Navbar_search.css
@@ -50,6 +50,7 @@
 }
 
 .logout {
+  cursor: pointer;
   width: 100px;
   height: auto;
   border-radius: 6px;    
