--- a/packages/react-frontend/src/components/SearchBar.css
+++ b/packages/react-frontend/src/components/SearchBar.css
@@ -1,6 +1,6 @@
 .input-wrapper{
     background-color: darkgray;
-    width: 150%;
+    width: 100%;
     border-radius: 15px;
     height: 4rem;
     padding: 15px 15px;
